--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 
 # Site settings
 title: Peter Poliwoda
+website: "http://peterpoliwoda.me"
 description: > # this means to ignore newlines until "baseurl:"
   Software Engineer. IBMer. Hobbyist Game Developer. Mobile app architect. Electric guitar enthusiast.
   Curious first adopter of new tech.
